apps/shopmgr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopmgr
  namespace: shopmgr
  labels:
    app: shopmgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopmgr
  template:
    metadata:
      labels:
        app: shopmgr
    spec:
      containers:
        - name: shopmgr
          image: ghcr.io/tuqui77/shopmgr:0.17.0
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/imagenes
              name: imagenes
      volumes:
        - name: imagenes
          persistentVolumeClaim:
            claimName: shopmgr
