apps/shopmgr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopmgr
  namespace: shopmgr
spec:
  selector:
    app: shopmgr
  ports:
    - port: 80
      targetPort: 80
